--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,14 @@
 <div class="footer">
 
-  <!--p class="copyright">wethepeopleguide<i class="fa fa-at" aria-hidden="true"></i>gmail.com
-  </p-->
-
+{% if site.social-links-enabled == true %}
+  <p class="footer-icons">
+    {% for social in site.data.social-links %}
+      <a class="icons nolinkborder" title="{{ social.hover-text }}" href="{{ social.link }}"><i class="fa {{ social.icon }}"></i></a>
+    {% endfor %}
+  </p>
+{% endif %}
   <p class="copyright">
-    &#169;2017<!--{{ site.time | date: '%Y' }}--> <a class="prim-sec nolinkborder" title="Go to {{site.title}}" href="http://wethepeople.tools">{{site.title}}</a>
+    &#169;2017<!--{{ site.time | date: '%Y' }}--> <a class="prim-sec nolinkborder" title="Go to {{site.title}}" href="{{site.url}}">{{site.title}}</a>
   </p>
 
   <p class="copyright">
