Update logo image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,7 @@
 <!-- RSS -->
 <link rel="alternate" type="application/rss+xml" title="{{site.title}} RSS" href="/feed.xml">
 
+<script src="https://use.typekit.net/oca0jdv.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 </head>
