--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,16 +9,23 @@
 
     <div class="navbar-toggler navbar-toggler-right" type="text" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span>MENU</span>
     </div>
-
-{% if site.logo-enabled == true %}
+{% comment %}
+  {% navbar uses EITHER logo image or logo-headline %}
+{% endcomment %}
+{% if site.logo-image-enabled == true %}
     <div class="navbar-brand">
-      <p class="image-block"><a class="nolinkborder" title="Go to home page" href="/"><img class="img-fluid header-image" src="{{site.baseurl}}/assets/images/header_image_square.png"></a></p>
-      <p class="text-block">{{site.logo-headline}}</p>
+
+      <!-- logo image for desktop -->
+      <p class="hidden-sm-down image-block"><a class="nolinkborder" title="Go to home page" href="/"><img class="img-fluid logo-image" src="{{site.baseurl}}/assets/images/header_image_square.png"></a></p>
+
+      <!-- logo image for mobile -->
+      <p class="hidden-md-up image-block"><a class="nolinkborder" title="Go to home page" href="/"><img class="img-fluid logo-image" src="{{site.baseurl}}/assets/images/header_image_square_small.png"></a></p>
+
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 {% else %}
     <div class="navbar-brand-no-logo">
-      <p class="text-block-no-logo">{{site.logo-headline}}</p>
+      <p class="logo-headline">{{site.logo-headline}}</p>
     </div>
     <div class="collapse navbar-collapse collapse-no-logo" id="navbarSupportedContent">
 {% endif %}
