--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -8,3 +8,17 @@
 @import "theme_{{site.theme-color}}";
 @import "font_{{site.font-combo}}";
 @import "application";
+
+/*
+The logo-headline is set to font-family-primary by default in application.scss.
+
+If "logo-headline-switch" is "true in config.yml, the following style is applied inline.
+*/
+
+{% if site.logo-headline-switch == true %}
+
+.navbar-brand-no-logo p.logo-headline {
+  font-family: $font-family-secondary;
+}
+
+{% endif %}
