--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,9 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+@charset "utf-8";
 
-@import "minima";
-@import "_theme_default";
+//@import "minima";
+@import "font_{{site.font-combo}}";
+@import "theme_{{site.theme-color}}";
+@import "application";
