--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<!--[if IE 8] <html class="no-js lt-ie9"> ![endif]-->
+<!--[if gt IE 8] <!--> <html lang="{{ page.lang | default: site.lang | default: "en" }}"> <!-- ![endif]-->
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body role="document">
 
-    {% include header.html %}
+{% include nav.html %}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+<div id="wrapper" class="row">
 
+  <div class="content-main">
+
+    {{ content }}
+
+  </div>
+
+  <div class="hidden-md-up footer-wrap">
     {% include footer.html %}
+  </div>
 
-  </body>
+</div>
+
+<!-- Scripts -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<script>
+(window.jQuery || document.write('<script src="/assets/js/fallback_jquery.min.js"><\/script>'));
+</script>
+
+<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=58b725d8b5b25f0011beba19&product=inline-share-buttons"></script>
+
+<script src="{{site.baseurl}}/assets/js/application.min.js"></script>
+
+</body>
 
 </html>
