--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<article class="post">
+<div id="page">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+  <h1 class="page-title">{{ page.title }}</h1>
 
-  <div class="post-content">
-    {{ content }}
+  <div class="page-body">
+
+    {{content}}
+
   </div>
 
-</article>
+</div>
