--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,9 @@
   <title>{% if page.title %}{{ site.title | escape }} - {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ site.description | escape }}">
   <meta name="author" content="{{ site.author }}">
-  <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+
+  <link rel="shortcut icon"  type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
+  <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="{{ "/assets/vendor.min.css" | relative_url }}">
 
